--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,45 +1,27 @@
 <section id="projects">
-<div class="container">
-  <h3>Projects</h3>
-  <div class="panel panel-default">
-    <div class="panel-body">
-		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 1</a></strong>
-			- Ei viderer tacimates pro, quem assum ea nam. Veritus omnesque eam te. Et natum mucius tamquam vel,
-			ea dolorem volumus deterruisset nec. Graeci mentitum sea an, eu prima elaboraret est.
-		</h5>
-		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 2</a></strong>
-			- An eripuit phaedrum qui, nec facer splendide ex, vel ea assum facilisi convenire.
-			Te his neglegentur consectetuer.
-		</h5>
-    	<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 3</a></strong>
-			- An alii quot tantas eum, doming platonem persecuti mea et, vim perpetua cotidieque delicatissimi in.
-		</h5>
-		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 4</a></strong>
-			- Vim an case vidit sententiae, est at euismod laboramus efficiantur. Ei sit brute lorem,
-			ea eam timeam viderer aliquid, cu integre omittam moderatius quo.
-		</h5>
-		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 5</a></strong>
-			- Dicta causae meliore ex vel, in vix erant integre petentium. Vix ei nisl scripta recusabo,
-			eam doming blandit facilisis.
-		</h5>
-		<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 6</a></strong>
-			- Inermis recusabo elaboraret mea et, dicat neglegentur vim te. Nec et sanctus scriptorem,
-			usu ex sapientem gubergren. Tamquam admodum ei usu.
-		</h5>
-		<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 7</a></strong>
-			- Essent putant indoctum sed in, reprimique persequeris neglegentur te quo. Nam rebum
-			tractatos partiendo at, debet ubique oporteat ut his.
-		</h5>
+	<div class="container">
+		<h3>Projects</h3>
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<h5>
+					<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/mhmorta/ostomentor">Ostomentor</a></strong>
+					- Here I have shared code of OstoMentor, an all-in-one app for Illiostomy patients. For more description, please
+					read my CV.
+				</h5>
+				<h5>
+					<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/mhmorta/AppliedMachineLearning_COMP551">Applied
+							Machine Learning</a></strong>
+					- You can find my project I did during Applied Machine Learning course at McGill University.
+				</h5>
 
-
-    </div>
-  </div>
-</div>
+				<h5>
+					<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/mhmorta/deeplearning_project">Deep Learning Project</a></strong>
+					- We all know we learn better when we teach to others... what if there is no one available?! I think 
+					a good idea is to summarize what you have learned to learn it deeper! From the begging of Fall 2018 I decided to create this repository and write 
+					summaries as much as I can. I should say I have some more ideas to make it more accessible rather than latex PDF files, but 
+					I really enjoy what I have gathered so far! 
+				</h5>
+			</div>
+		</div>
+	</div>
 </section>
