--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,7 @@
 <section id="projects">
 	<div class="container">
 		<h3>Projects</h3>
+		Here is list of some of the projects I have them right now as GitHub repository:
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<h5>
